Majek/update mm (#22)
* (tests will fail) update mm wrapper and fix indents
tests will fail due to wrong adventure in paper - this will not be merged until adventure 4.10.0 is released and paper is updated

* Update to 1.18.2 and clean slightly

Co-authored-by: Majekdor <ksbarnes39@gmail.com>